# WasteKnack_Waste_Management_Website

./: .gitignore  README.md  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/authapi/: admin.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/authapi/migrations/: 0001_initial.py  0002_remove_customuser_is_approved.py  0003_alter_customuser_role.py  0004_alter_customuser_id.py
backend/backend/: settings.py  urls.py
backend/notification/: admin.py  models.py  serializers.py  urls.py  views.py
backend/notification/migrations/: 0001_initial.py  0002_rename_type_notification_message_type_and_more.py
backend/transaction/: admin.py  models.py  serializers.py  urls.py  views.py
backend/transaction/migrations/: 0001_initial.py  0002_remove_transaction_type_transaction_trans_type_and_more.py
backend/user/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/user/migrations/: 0001_initial.py  0002_alter_reward_id.py  0003_userprofile.py
backend/waste/: admin.py  models.py  serializers.py  urls.py  views.py
backend/waste/migrations/: 0001_initial.py  0002_alter_collectedwaste_collection_date_and_more.py  0003_remove_report_collector.py  0004_alter_collectedwaste_status.py
frontend/: hellomiddleware.js  package-lock.json  package.json
frontend/app/: layout.js  layout.jsx  metadata.js  page.jsx
frontend/app/(root)/: layout.jsx  page.jsx
frontend/components/: Header.jsx  Sidebar.jsx
frontend/lib/: ProtectedRoute.jsx
frontend/redux/: constant.js
frontend/store/: constant.js  store.js
(+73 files in other folders)
