[tool.poetry]
name = "wasteknack-waste-management-website"
version = "0.1.0"
description = ""
authors = ["Takib Yeasar <mdtakibyeasar@gmail.com>"]

[tool.poetry.dependencies]
python = "3.11.9"
django = "^5.1.4"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.6.0"
python-dotenv = "^1.0.1"
djangorestframework-simplejwt = "^5.3.1"
psycopg2 = "^2.9.10"
setuptools = "^75.6.0"
pillow = "^11.0.0"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

